fixes z-index for links

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -157,7 +157,7 @@ p.isoform-p {
   height: 100%;
   width: 134px;
   position: fixed;
-  z-index: -1;
+  z-index: 0;
   top: 0;
   left: 0;
   background-color: #343a40;
